Tue Sep 10 14:37:23 1996  Tom Yu  <tlyu@mit.edu>

	* v5passwd.M: remove extra args to .TH

Sun Aug 18 18:29:39 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in: Compile v5passwd - the old passwd changing client. 

	* adm_conn.c, kpasswd.c, v5passwd.M: Added the pieces required to
		build a v5b6 simple password changing client. 

Thu Jul 25 17:01:32 1996  Marc Horowitz  <marc@mit.edu>

	* Makefile.in, configure.in, adm_rw.c, kadm5_defs.h, main.c,
 	proto_serv.c, srv_net.c: combined pieces of the old v5server and
 	kadm libraries with calls to the new kadm5srv library to produce a
 	daemon which handles the v5b6 "simple" password changing protocol.